--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -75,11 +75,26 @@
   }
 }
 
-html,body {
-  height: 100%;
-  width: 100% !important;
+.divider {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
-#root {
-  height: 100%;
-  width: 100% !important;
+
+.divider::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: 1px;
+  background-color: #ddd;
+}
+
+.divider-text {
+  position: relative;
+  padding: 0 10px;
+  background-color: #fff;
+  margin-right: 70%;
 }
